# tree-sitter-htmlmustache

./: .gitignore  .pnpm-approve-builds.yaml  .prettierignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  eslint.config.mjs  grammar.js  main.html  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.py  test.txt  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  lsp.yml  publish-npm.yml  publish.yml  release.yml
bindings/c/: tree-sitter-htmlmustache.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
browser/: esbuild.mjs
cli/: esbuild.mjs  tsconfig.json
cli/src/: check.test.ts  check.ts  format.test.ts  format.ts  main.ts  wasm.ts
lsp/: .gitignore  .pnpm-approve-builds.yaml  .vscodeignore  LICENSE  README.md  esbuild.mjs  eslint.config.mjs  language-configuration.json  package.json  pnpm-lock.yaml  tsconfig.base.json
lsp/client/: package.json
lsp/server/: package.json  tsconfig.json  vitest.config.ts
lsp/syntaxes/: embedded-languages.json  htmlmustache.tmLanguage.json
lsp/test-files/: element.mustache  example.mustache  test.mustache
queries/: highlights.scm  injections.scm
scripts/: generate-rule-docs.ts
src/: custom_raw_tags.h  grammar.json  mustache_tag.h  node-types.json  parser.c  scanner.c  tag.h
src/browser/: browser.test.ts  index.ts  tsconfig.json
src/core/: collectErrors.ts  configSchema.ts  customRuleFilter.ts  diagnostic.ts  embeddedRegions.ts  grammar.ts  htmlBalanceChecker.ts  mustacheChecks.ts  nodeHelpers.ts  ruleMetadata.ts  selectorMatcher.ts
test/corpus/: checkbox.txt  (+10 more)
(+61 files in other folders)
