[package]
name = "tree-sitter-htmlmustache"
description = "HTML with Mustache/Handlebars template syntax grammar for tree-sitter"
version = "0.0.2"
authors = ["Peter Stenger"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "html", "mustache", "handlebars"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/reteps/tree-sitter-htmlmustache"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.6"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26"
